K8S/jenkins-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: jenkins
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-server-np
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: jenkins
      protocol: TCP
      port: 80
      targetPort: 8080
