K8S/keycloak-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: keycloak
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-server-np
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - name: keycloak
      protocol: TCP
      port: 80
      targetPort: 8080
