K8S/node-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeservice
  template:
    metadata:
      labels:
        app: nodeservice
    spec:
      containers:
        - name: nodeservice
          image: kevdev74/node-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: node-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: nodeservice
  ports:
    - name: nodeservice
      protocol: TCP
      port: 80
      targetPort: 4040
---
apiVersion: v1
kind: Service
metadata:
  name: nodeservice-server-np
spec:
  type: NodePort
  selector:
    app: nodeservice
  ports:
    - name: nodeservice
      protocol: TCP
      port: 80
      targetPort: 4040
