K8S/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-reges: 'true'
spec:
  rules:
    - host: niquetamere.com # On defini le nom de domaine sur la quel nous allons requeter
      http:
        paths:
          - path: /app # On defini le chemin d'acces au service pour les requettes
            pathType: Prefix
            backend:
              service:
                name: node-clusterip-server # On recupere l'adresse pour communiquer avec le service
                port:
                  number: 6060
          - path: /jenkins # On defini le chemin d'acces au service pour les requettes
            pathType: Prefix
            backend:
              service:
                name: jenkins-clusterip-server # On recupere l'adresse pour communiquer avec le service
                port:
                  number: 80
          - path: /keycloak # On defini le chemin d'acces au service pour les requettes
            pathType: Prefix
            backend:
              service:
                name: keycloak-clusterip-server # On recupere l'adresse pour communiquer avec le service
                port:
                  number: 80
